kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-slsa-provenance
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  background: false
  rules:
    - name: check-slsa-attestation
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - demo-prod
      verifyImages:
        - imageReferences:
            - "*"
          attestations:
            - type: https://slsa.dev/provenance/v0.2
              attestors:
                - entries:
                    - keyless:
                        subjectRegExp: "https://github.com/slsa-framework/slsa-github-generator/.*"
                        issuer: "https://token.actions.githubusercontent.com"
                        rekor:
                          url: https://rekor.sigstore.dev
          required: true
